# tools-for-agents-

./: .env.example  .gitignore  PRD.md  alembic.ini  docker-compose.yml  pyproject.toml
.atl/: skill-registry.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_audit_event_columns.py  003_waitlist_tables.py
scripts/: __init__.py  run_chat.py  seed.py
src/: main.py
src/application/: exceptions.py
src/application/dto/: commands.py  queries.py  responses.py  user_context.py
src/application/use_cases/: __init__.py  add_waitlist.py  block_staff_time.py  cancel_appointment.py  create_appointment.py  find_available_slots.py  find_available_staff.py  get_appointment_events.py  get_client_appointments.py  get_service_details.py  get_waitlist_entries.py  list_services.py  notify_waitlist.py  reschedule_appointment.py  unblock_staff_time.py
src/domain/: exceptions.py
src/domain/entities/: __init__.py  appointment.py  client.py  service.py  staff.py  staff_time_off.py  user.py  waitlist_entry.py  waitlist_notification.py
src/domain/policies/: __init__.py  availability_policy.py  cancellation_policy.py  overlap_policy.py  policy_result.py
src/infrastructure/: config.py
src/interfaces/api/: app.py  (+4 more)
tests/: conftest.py
tests/factories/: __init__.py  domain_factories.py
tests/integration/: conftest.py  test_appointment_repo.py  test_client_repo.py  test_migration_bootstrap.py  test_service_repo.py  test_staff_availability_repo.py  test_staff_repo.py  test_staff_time_off_repo.py  test_waitlist_entry_repo.py  test_waitlist_notification_repo.py
(+115 files in other folders)
